--- a/app/views/pins/new.html.erb
+++ b/app/views/pins/new.html.erb
@@ -16,8 +16,13 @@
 
     <h1 class="text-2xl font-bold text-center mb-6">Create a New Pin</h1>
 
-    <%= form_with(model: @pin, local: true, html: { multipart: true, class: "space-y-4" }) do |f| %>
-      
+    <%= form_with(
+          model: @pin,
+          local: true,
+          data: { turbo: false },
+          html: { multipart: true, class: "space-y-4" }
+        ) do |f| %>
+
       <!-- Title -->
       <div>
         <%= f.label :title, class: "block mb-1 font-semibold" %>
@@ -36,7 +41,7 @@
         <%= f.file_field :image, class: "w-full text-gray-700" %>
       </div>
 
-      <!--  TAG PEOPLE  -->
+      <!-- TAG PEOPLE -->
       <div data-controller="tag-people" class="mb-6">
         <label class="block mb-2 font-semibold">Tag People</label>
 
