--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,43 +1,34 @@
 <div class="max-w-5xl mx-auto py-8 px-4">
 
   <!-- Profile Header -->
-  <div class="flex items-center justify-between mb-8">
-    <div class="flex items-center space-x-4">
+  <turbo-frame id="profile_header_<%= @user.id %>">
+    <div class="flex items-center justify-between mb-8">
+      <div class="flex items-center space-x-4">
 
-      <% if @user.avatar.attached? %>
-        <%= image_tag url_for(@user.avatar),
-              class: "rounded-full shadow object-cover",
-              width: 96,
-              height: 96 %>
-      <% else %>
-        <%= image_tag "default-avatar.png",
-              width: 96,
-              height: 96,
-              class: "rounded-full shadow" %>
-      <% end %>
+        <% if @user.avatar.attached? %>
+          <%= image_tag url_for(@user.avatar),
+                class: "rounded-full shadow object-cover",
+                width: 96,
+                height: 96 %>
+        <% else %>
+          <%= image_tag "default-avatar.png",
+                width: 96,
+                height: 96,
+                class: "rounded-full shadow" %>
+        <% end %>
 
-      <div>
-        <h1 class="text-3xl font-bold text-gray-900"><%= @user.username %></h1>
-        <p class="text-gray-600"><%= @user.followers.count %> followers</p>
+        <div>
+          <h1 class="text-3xl font-bold text-gray-900"><%= @user.username %></h1>
+
+          <!-- Followers count WILL update instantly now -->
+          <p class="text-gray-600"><%= @user.followers.count %> followers</p>
+        </div>
       </div>
-    </div>
 
-    <% if logged_in? && current_user != @user %>
-      <% if current_user.following?(@user) %>
-        <%= button_to user_follow_path(@user),
-            method: :delete,
-            class: "px-6 py-2 border border-gray-300 rounded-full hover:bg-gray-200" do %>
-          Following
-        <% end %>
-      <% else %>
-        <%= button_to user_follow_path(@user),
-            method: :post,
-            class: "px-6 py-2 bg-blue-600 text-white rounded-full hover:bg-blue-700" do %>
-          Follow
-        <% end %>
-      <% end %>
-    <% end %>
-  </div>
+      <!-- Follow button, still rendered inside the header Turbo Frame -->
+      <%= render "users/follow_button", user: @user %>
+    </div>
+  </turbo-frame>
 
   <!-- TABS -->
   <div class="flex space-x-6 border-b mb-6">
