Updating my follow button

--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -31,7 +31,7 @@
               </div>
             <% end %>
 
-            <!-- ⭐ HOVER OVERLAY -->
+            <!--  HOVER OVERLAY -->
             <div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-40 transition-all duration-300 flex items-center justify-center opacity-0 group-hover:opacity-100">
 
               <div class="flex space-x-6 text-white font-semibold text-lg">
