--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -167,7 +167,7 @@
 
                 <div class="flex-1">
 
-                  <!-- ⭐ ENABLE MENTIONS HERE -->
+                  <!--  ENABLE MENTIONS HERE -->
                   <div class="relative w-full" data-controller="mentions">
 
                     <%= f.text_area :content,
